flux/observability/prometheus-stack/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus
    namespace: prometheus-stack
spec:
    ingressClassName: traefik-internal
    rules:
        - host: prometheus.biblehome.xyz
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: prometheus-prometheus
                            port:
                                number: 9090
